--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
+# Node
 node_modules/
-.env
 dist/
-.DS_Store
+build/
+.env
+.env.local
 npm-debug.log*
-.vscode/
+.DS_Store
 coverage/
-logs/
+.vscode/
+.idea/
 *.log
