--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
   "name": "kartyom3248",
   "version": "0.1.0",
-  "description": "Node.js project skeleton for repository KARTYOM3248",
+  "description": "Node.js project skeleton for KARTYOM3248",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "NODE_ENV=development node src/index.js",
-    "test": "echo \"No tests specified\" && exit 0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KARTYOM3248/KARTYOM3248.git"
+    "test": "node --test"
   },
   "keywords": [],
   "author": "",
